# GSI

./: .gitignore  .gitmodules  1  AnIntro  CMakeLists.txt  GNUmakefile  GSI_GridCompMod.F90  INSTALL.md  Makefile  Makefile.conf.OSF1  Makefile.dependency  README.cmake  README.discover  README.md  analyzer  anbkerror_reg.f90  anisofilter.f90  balmod.f90  berror.f90  bkerror.f90  bkgcov.f90  bkgvar.f90  bkgvar_rewgt.f90  bkgvar_rewgt.new  calc_fov_crosstrk.f90  calctends_ad.F90  calctends_no_ad.F90  calctends_no_tl.F90  calctends_tl.F90  clean  combine_radobs.f90  compact_diffs.f90  compile  compute_derived.f90  configure  constants.f90  control2model.f90  control2state.f90  control_vectors.f90  dx  (+174 more)
core-libs/: CMakeLists.txt  test
core-libs/bacio/: CMakeLists.txt  bacio.c  baciof.f  baciof.h  bafrio.f  byteswap.c  chk_endianc.f  clib.h  makebacio_ccs.sh  makebacio_theia.sh  makebacio_wcoss.sh  makebacio_zeus.sh
core-libs/bufr/: CMakeLists.txt
core-libs/crtm/: CMakeLists.txt
core-libs/io_int/: CMakeLists.txt
core-libs/nemsio/: CMakeLists.txt
core-libs/sfcio/: CMakeLists.txt
core-libs/sigio/: CMakeLists.txt
core-libs/sp/: CMakeLists.txt
core-libs/w3emc/: CMakeLists.txt
core-libs/w3nco/: CMakeLists.txt
libsrc/wrflib/: CMakeLists.txt  io_int_stubs.f90  transpose.code  wrf_io.f90  wrf_io_flags.h
src/: CMakeLists.txt  GNUmakefile  GSI_GridCompMod.F90  Makefile  Makefile.4dvar  Makefile.conf  Makefile.conf.AIX  Makefile.conf.Linux  Makefile.conf.Linux.IA64.efc  Makefile.conf.Linux.jet  Makefile.conf.cheyenne  Makefile.conf.cray  Makefile.conf.hera  Makefile.conf.hera.moduleload  Makefile.conf.jet  Makefile.conf.jibb  Makefile.conf.nco  Makefile.conf.s4  Makefile.conf.theia  Makefile.conf.wcoss  Makefile.conf.wcoss.prod  Makefile.conf.zeus  Makefile.conf.zeus.gsdcloud4arw  Makefile.conf.zeus.gsdcloud4nmmb  Makefile.dependency  Makefile.src  abor1.f90  add_gfs_stratosphere.f90  adjtest.f90  adjtest_obs.f90  adjust_cloudobs_mod.f90  aeroinfo.F90  aeroinfo.f90  aircraftinfo.f90  aircraftobsqc.f90  anberror.f90  anbkerror.f90  aniso_ens_util.f90  anisofilter.f90  anisofilter_glb.f90  (+681 more)
src/GSD/: CMakeLists.txt
src/bufr/: .gitrepo  CMakeLists.txt  README.libbufr  bufrlib.h  bufrlib0.PRM  bvers.f  cobfl.c  makebufrlib.sh  mesgbf.f
src/efsoi/: CMakeLists.txt
src/enkf/: 1  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Makefile.conf.AIX  Makefile.conf.cray  Makefile.conf.hera  Makefile.conf.hera.moduleload  Makefile.conf.jet  Makefile.conf.nco  Makefile.conf.theia  Makefile.conf.wcoss  Makefile.conf.wcoss.prod  Makefile.conf.zeus  Makefile.dependency  Makefile.dependency.gfs  Makefile.dependency.nmmb  Makefile.dependency.wrf  Makefile_gfs  Makefile_nmmb  Makefile_wrf  README  README.shmem  cmake_install.cmake  controlvec.f90  covlocal.f90  d0  d1  d2  dd0  enkf.F90  enkf.f90  enkf_files.cmake  enkf_main.f90  enkf_obs_sensitivity.f90  enkf_obsmod.f90  expand_ens.f90  fv3_netcdf_mod.F90  genqsat1.f90  (+49 more)
src/fv3gfs_ncio/: CMakeLists.txt  module_fv3gfs_ncio.f90  quantize_data_code.f90  read_attribute_code.f90  read_scalar_attribute_code.f90  read_vardata_code_1d.f90  read_vardata_code_2d.f90  read_vardata_code_3d.f90  read_vardata_code_4d.f90  read_vardata_code_5d.f90  write_attribute_code.f90  write_vardata_code.f90  write_vardata_code_1d.f90  write_vardata_code_2d.f90  write_vardata_code_3d.f90  write_vardata_code_4d.f90
src/gsi/: .CMakeLists.txt.swp  CMakeLists.txt  GSISRC.cmake  abstract_ensmod.f90  adStack.c  adjtest.f90  adjtest_obs.f90  adjust_cloudobs_mod.f90  aero_guess_at_obs_locations.f90  aeroinfo.f90  aircraftinfo.f90  amassaeromod.f90  anberror.f90  anbkerror.f90  aniso_ens_util.f90  anisofilter.f90  anisofilter_glb.f90  antcorr_application.f90  apply_scaledepwgts.f90  atms_spatial_average_mod.f90  balmod.f90  berror.f90  bias_predictors.f90  bicg.f90  bicglanczos.F90  bkerror.f90  bkgcov.f90  bkgvar.f90  bkgvar_rewgt.f90  buddycheck_mod.f90  cads.f90  calc_fov_crosstrk.f90  calctends.f90  calctends_ad.f90  calctends_no_ad.f90  calctends_no_tl.f90  calctends_tl.f90  chemmod.f90  class_get_fv3_regional_ensperts.f90  class_get_pseudo_ensperts.f90  (+523 more)
src/mgbf/: CMakeLists.txt  jp_pbfil.f90  jp_pbfil2.f90  jp_pbfil3.f90  jp_pietc.f90  jp_pietc_s.f90  jp_pkind.f90  jp_pkind2.f90  jp_pmat.f90  jp_pmat4.f90  kinds.f90  mg_bocos.f90  mg_domain.f90  mg_domain_loc.f90  mg_entrymod.f90  mg_filtering.f90  mg_generations.f90  mg_input.f90  mg_interpolate.f90  mg_intstate.f90  mg_mppstuff.f90  mg_parameter.f90  mg_timers.f90  mg_transfer.f90  type_intstat_locpointer.inc  type_intstat_point2this.inc  type_parameter_locpointer.inc  type_parameter_point2this.inc
src/ncdiag/: :w  CMakeLists.txt  NCDIAG_SRC  nc_diag_cat.F90  nc_diag_fson.f90  nc_diag_read_mod.F90  nc_diag_res.f90  nc_diag_write_mod.F90  ncd_kinds.F90  ncdc_cli_process.F90  ncdc_climsg.F90  ncdc_data.F90  ncdc_data_MPI.F90  ncdc_dims.F90  ncdc_metadata.F90  ncdc_realloc.F90  ncdc_state.F90  ncdc_types.f90  ncdc_vars.F90  ncdf_path_m.F90  ncdf_path_m.f90  ncdf_string_m.f90  ncdf_value_m.f90  ncdiag_files.cmake  ncdr_alloc_assert.f90  ncdr_attrs.f90  ncdr_attrs_fetch.f90  ncdr_check.f90  ncdr_climsg.F90  ncdr_dims.f90  ncdr_global_attrs.f90  ncdr_global_attrs_fetch.f90  ncdr_realloc_mod.F90  ncdr_state.f90  ncdr_types.f90  ncdr_vars.f90  ncdr_vars_fetch.f90  ncdres_climsg.F90  ncdw_chaninfo.F90  ncdw_ciresize.F90  (+13 more)
src/wrflib/: CMakeLists.txt  model_data_order.inc  module_driver_constants.F90  module_machine.F90  pack_utils.c  wrf_io.F90.orig
unit-tests/: CMakeLists.txt  test_adjoint.pf  test_adjoint.pf.old  test_read_wrf_mass.pf  test_read_wrf_nmm.pf
unit-tests/PFUNIT/: pFUnitConfig.cmake  pFUnitConfigVersion.cmake
util/: CMakeLists.txt  README  gsienvreport.sh
util/AeroDA/: CMakeLists.txt
util/Analysis_Utilities/: CMakeLists.txt
util/Baseline/: check_build.pl
util/Config/: gmh.pl  protex
util/Conventional_Monitor/: CMakeLists.txt  CMon_install.pl  ConMon_install.pl  ConvMon_install.pl  build_ConMon_cmake.sh  get_hostname.pl  lst  lst2  makeall.sh
util/Correlated_Obs/: Makefile  (+35 more)
(+8108 files in other folders)
