cmake_minimum_required(VERSION 2.6)
message("in core-libs")
if(BUILD_CORELIBS)
  if(BUILD_CRTM)
    add_subdirectory(crtm)
  endif()
  if(BUILD_BACIO)
    add_subdirectory(bacio)
  endif()
  if(BUILD_BUFR)
    add_subdirectory(bufr)
  endif()
  if(BUILD_SFCIO)
    add_subdirectory(sfcio)
  endif()
  if(BUILD_SIGIO)
    add_subdirectory(sigio)
  endif()
  if(BUILD_NEMSIO)
    add_subdirectory(nemsio)
  endif()
  if(BUILD_SP)
    add_subdirectory(sp)
  endif()
  if(BUILD_EMC)
    add_subdirectory(w3emc)
  endif()
  if(BUILD_NCO)
    add_subdirectory(w3nco)
  endif()
endif()
