cmake_minimum_required(VERSION 2.6)
if(BUILD_CORELIBS)
  file(GLOB SP_SRC ${SP_DIR}/*.f )
  set_source_files_properties( ${SP_SRC} PROPERTIES COMPILE_FLAGS ${SP_Fortran_FLAGS} )
  file(GLOB SP_F77_SRC ${SP_DIR}/*.F )
  if( SP_F77_SRC )
    set_source_files_properties( ${SP_F77_SRC} PROPERTIES COMPILE_FLAGS ${SP_F77_FLAGS} )
  endif()
  add_library( ${sp} STATIC ${SP_SRC} ${SP_F77_SRC} )
  set_target_properties( ${sp} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
endif()
