cmake_minimum_required(VERSION 2.6)
if(BUILD_CORELIBS)
  set (CMAKE_C_FLAGS "-O0 -DUNDERSCORE -DLINUX -D__linux__")
  file(GLOB W3NCO_SRC ${W3NCO_DIR}/*.f)
  file(GLOB W3NCO_C_SRC ${W3NCO_DIR}/*.c)
  file(GLOB W3NCO_F77_SRC ${W3NCO_DIR}/*.F)
  set_source_files_properties( ${W3NCO_C_SRC} COMPILE_FLAGS ${W3NCO_C_FLAGS})
  set_source_files_properties( ${W3NCO_F77_SRC} COMPILE_FLAGS ${W3NCO_Fortran_FLAGS})
  set_source_files_properties( ${W3NCO_SRC} COMPILE_FLAGS ${W3NCO_Fortran_FLAGS})
  add_library( ${w3nco} STATIC ${W3NCO_C_SRC} ${W3NCO_SRC} ${W3NCO_F77_SRC} )
  set_target_properties( ${w3nco} PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_INCLUDE_OUTPUT_DIRECTORY} )
endif()
